--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.3.3/leaflet.css" rel="stylesheet">
     <style>
         #map {
-        width: 100%;
-        height: 400px;
+        width: 66%;
+        padding-top: 33%;
     }
     </style>
 </head>
