--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="fi">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Pyöräparkkikartta</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.3.3/leaflet.css" rel="stylesheet">
 
     <link href="css/karttasovellus.css" rel="stylesheet">
