--- a/index.html
+++ b/index.html
@@ -23,5 +23,6 @@
 <script src="https://unpkg.com/esri-leaflet-geocoder"></script>
 <script src="js/kartta.js"></script>
 <script src="js/marker.js"></script>
+<script src="js/saa.js"></script>
 </body>
 </html>
