--- a/esittely.html
+++ b/esittely.html
@@ -7,6 +7,7 @@
 </head>
 <body>
 <div id="body">
+    <img src="kuvat/placeholder.png">
 <h2>Ryhmä 10</h2>
     <div id="ryhma"><p>Juho<br>Teemu<br>Tommi</p></div>
     <a id="index.html" href="url">Karttasovellus</a>
