--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
 </head>
 <body>
+<div id="otsikko"><h1>Pyöräpaikkojen etsiminen</h1></div>
 <div id="saa"></div>
 <div id="map"></div>
 <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
