--- a/index.html
+++ b/index.html
@@ -7,10 +7,12 @@
 
     <link href="css/karttasovellus.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Varela&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Concert+One&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Rubik&display=swap" rel="stylesheet">
 
 </head>
 <body>
-<div id="otsikko"><h1>Pyöräpaikkojen etsiminen</h1></div>
+<div id="otsikko"><h1>Pyöräpaikkojen sijainnit ja pyörien määrät</h1></div>
 <div id="saa"></div>
 <div id="map"></div>
 <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
