--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
 <div id="navigaatio" class="visible">
     <h4>Navigaatio palkki</h4>
     <p>Lähtöpiste:</p>
-    <textarea class="tekstialue" readonly></textarea>
+    <textarea class="tekstialue" id="lähtöpiste" readonly></textarea>
     <p>Määränpää:</p>
-    <textarea class="tekstialue" readonly></textarea>
+    <textarea class="tekstialue" id="loppupiste" readonly></textarea>
     <p></p>
     <button id="haku">Hae reitti</button>
 </div>
