--- a/esittely.html
+++ b/esittely.html
@@ -8,9 +8,11 @@
 <body>
 <div id="body">
     <img src="kuvat/placeholder.png">
-<h2>Ryhmä 10</h2>
-    <div id="ryhma"><p>Juho<br>Teemu<br>Tommi</p></div>
-    <a id="index.html" href="url">Karttasovellus</a>
+<div id="palkki"><div id="vasenpalkki"><h2>Ryhmä 10</h2>
+    <div id="ryhma"><p>Juho<br>Teemu<br>Tommi</p>
+        <a id="index.html" href="url">Karttasovellus</a>
+    </div></div>
+</div>
     <ul>
         <li>Kartta<br><a href="https://leafletjs.com/">https://leafletjs.com/</a>
             <br><p>Lisätietoja: On sama kartan ilmaisversio, kuin sähköauto esimerkissä.</p></li>
