--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
     <textarea class="tekstialue" id="loppupiste" readonly></textarea>
     <p></p>
     <button id="haku">Hae reitti</button>
+    <p></p>
+    Arvioitu matkan kesto: <a id="aika"></a>
 </div>
 <!-- Load Esri Leaflet from CDN -->
 <script src="https://unpkg.com/esri-leaflet"></script>
