esittely css muutoksia

--- a/esittely.html
+++ b/esittely.html
@@ -7,7 +7,9 @@
 </head>
 <body>
 <img src="kuvat/placeholder.png">
+
 <div id="body">
+
 <div id="palkki"><div id="vasenpalkki"><h2>Ryhmä 10</h2>
     <div id="ryhma"><p>Juho<br>Teemu<br>Tommi</p>
         <a id="index.html" href="url">Karttasovellus</a>
@@ -23,6 +25,7 @@
         <li>Navigointi<br><a href=""></a>
             <p>Lisätietoja:</p></li>
     </ul>
+    <div id="oikeapalkki"><img id="kuva_oikea" src="kuvat/placeholder_oikea.png"></div>
 </div>
 </body>
 </html>
