--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Pyöräparkkikartta</title>
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.3.3/leaflet.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.5.1/leaflet.css" rel="stylesheet">
 
     <link href="css/karttasovellus.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Varela&display=swap" rel="stylesheet">
@@ -21,7 +21,7 @@
 <script src="https://unpkg.com/leaflet/dist/leaflet-src.js"></script>
 <div id="navigaatioJaOhjeet">
     <div id="navigaatio" class="visible">
-        <h4>Navigaatio palkki</h4>
+        <h4>Navigaatio</h4>
         <p>Lähtöpiste:</p>
         <textarea class="tekstialue" id="lähtöpiste" readonly></textarea>
         <p>Määränpää:</p>
