--- a/esittely.html
+++ b/esittely.html
@@ -18,8 +18,22 @@
             <br><p>Lisätietoja: On sama kartan ilmaisversio, kuin sähköauto esimerkissä.</p></li>
         <li>Sää<br><a href="https://openweathermap.org/api">https://openweathermap.org/api</a>
             <p>Lisätietoja: Antaa Helsingin säätiedot. Käyttö on hieman rajoittunutta ilmaisuutensa takia.</p></li>
-        <li>Pyöräpaikat<br><a href="https://api.digitransit.fi/routing/v1/routers/hsl/bike_rental">https://api.digitransit.fi/routing/v1/routers/hsl/bike_rental</a>
-            <br><p>Lisätietoja: Sisältää reaaliaikaisen datan pyöräpisteistä ja pyörien määristä.</p></li>
+        <li><b>Pyöräpaikat</b><br><a href="https://api.digitransit.fi/routing/v1/routers/hsl/bike_rental">https://api.digitransit.fi/routing/v1/routers/hsl/bike_rental</a>
+            <br><p><b>Lisätietoja:</b> <br> Sisältää Helsingin, Vantaan ja Espoon pyöräasemien koordinaatit, nimet, reaaliaikaiset pyörien määrät ja asemien kapasiteetit.
+            Asemien osoitteet piti hakea Leafletin Reverse geocode -funktiolla, joka muuttaa koordinaatit osoitteiksi. Kaikkien pyöräasemien osoitteita ei voitu
+            kuitenkaan hakea samaan aikaan sillä Leafletin severit tulkitsee tämän ilmeisesti palvelunestohyökkäykseksi ja blokkaa pääsyn servereille. Tästä syystä
+            yksittäisen pyöräaseman osoitteen ja muiden tietojen hakeminen toteutetaan vasta sitten kun käyttäjä on klikannut kyseisen aseman markkeria.
+                <br><br><b>Reverse geocode -funktio:</b><br>
+                L.esri.Support.cors = false;<br>
+                var geocodeService = L.esri.Geocoding.geocodeService();<br>
+                function geoCode(koordinaatit2){<br>
+                geocodeService.reverse().latlng([koordinaatit2.lat, koordinaatit2.lng]).run(function(error, result) {<br>
+                if (error) {<br>
+                return; }<br>
+                osoite3 = `${result.address.Match_addr}`<br>
+                }); <br>
+                }
+               </p></li>
         <li>Navigointi<br><a href=""></a>
             <p>Lisätietoja:</p></li>
     </ul>
