--- a/esittely.html
+++ b/esittely.html
@@ -37,8 +37,8 @@
                 }); <br>
                 }
                </p></li>
-        <li>Navigointi<br><a href=""></a>
-            <p>Lisätietoja:</p></li>
+        <li>Navigointi<br><a href="https://api.digitransit.fi/routing/v1/routers/finland/index/graphql">https://api.digitransit.fi/routing/v1/routers/finland/index/graphql</a>
+            <p>Lisätietoja: Hakee body parametrien perusteella tietoa koko suomen reiteistä.</p></li>
     </ul>
     <div id="oikeapalkki"><img id="kuva_oikea" src="kuvat/placeholder_oikea.png"></div>
 </div>
