--- a/esittely.html
+++ b/esittely.html
@@ -6,7 +6,7 @@
     <link href="css/esittely.css" rel="stylesheet">
 </head>
 <body>
-<img src="kuvat/placeholder.png">
+<img src="kuvat/banner.jpg">
 
 <div id="body">
 
