--- a/esittely.html
+++ b/esittely.html
@@ -19,7 +19,7 @@
         <li>Kartta<br><a href="https://leafletjs.com/">https://leafletjs.com/</a>
             <br><p>Lisätietoja: On sama kartan ilmaisversio, kuin sähköauto esimerkissä.</p></li>
         <li>Sää<br><a href="https://openweathermap.org/api">https://openweathermap.org/api</a>
-            <p>Lisätietoja: Antaa Helsingin säätiedot. Käyttö on hieman rajoittunutta ilmaisuutensa takia.</p></li>
+            <p>Lisätitoja: Antaa Helsingin säätiedot. Käyttö on hieman rajoittunutta ilmaisuutensa takia.</p></li>
         <li>Pyöräpaikat<br><a href="https://api.digitransit.fi/routing/v1/routers/hsl/bike_rental">https://api.digitransit.fi/routing/v1/routers/hsl/bike_rental</a>
             <br><p>Lisätietoja: Sisältää reaaliaikaisen datan pyöräpisteistä ja pyörien määristä.</p></li>
         <li>Navigointi<br><a href=""></a>
