--- a/esittely.html
+++ b/esittely.html
@@ -24,7 +24,7 @@
         <li><b>Pyöräpaikat</b><br><a href="https://api.digitransit.fi/routing/v1/routers/hsl/bike_rental">https://api.digitransit.fi/routing/v1/routers/hsl/bike_rental</a>
             <br><p><b>Lisätietoja:</b> <br> Sisältää Helsingin, Vantaan ja Espoon pyöräasemien koordinaatit, nimet, reaaliaikaiset pyörien määrät ja asemien kapasiteetit.
             Asemien osoitteet piti hakea Leafletin Reverse geocode -funktiolla, joka muuttaa koordinaatit osoitteiksi. Kaikkien pyöräasemien osoitteita ei voitu
-            kuitenkaan hakea samaan aikaan sillä Leafletin severit tulkitsee tämän ilmeisesti palvelunestohyökkäykseksi ja blokkaa pääsyn servereille. Tästä syystä
+            kuitenkaan hakea samaan aikaan sillä Leafletin serverit tulkitsee tämän ilmeisesti palvelunestohyökkäykseksi ja blokkaa pääsyn servereille. Tästä syystä
             yksittäisen pyöräaseman osoitteen ja muiden tietojen hakeminen toteutetaan vasta sitten kun käyttäjä on klikannut kyseisen aseman markkeria.
                 <br><br><b>Reverse geocode -funktio:</b><br>
                 L.esri.Support.cors = false;<br>
