vielä viimeistellympi css

--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
     <div id="ohjeet">
         <h4>Käyttöohjeet</h4>
         <p>Pyöräapu etsii kaikki HSL:seudun pyöräpaikat ja merkitsee ne kartalle.</p>
-        <p>Kartalla olevia merkkejä hiirellä painamalla saat esille sen pyöräpaikan tiedot.</p>
+        <p>Kartalla olevia merkkejä hiirellä painamalla saat esille kyseisen pyöräpaikan tiedot.</p>
         <p>Voitte sen jälkeen laittaa haluamanne merkit alkupisteeksi ja määränpääksi.</p>
-        <p>Hae nappia painamalla ohjelma laskee ja piirtää reitin kahden pisteen välille.</p>
-        <p>Ohjelma myös näyttää päivän sään ja kuinka pitkään matka arviolta kestää.</p>
+        <p><b>Hae</b> nappia painamalla ohjelma laskee ja piirtää reitin kahden pisteen välille.</p>
+        <p>Ohjelma myös näyttää päivän sään ja kuinka kauan matka arviolta kestää.</p>
     </div>
 </div>
 <div id="mapJaSaa">
