--- a/esittely.html
+++ b/esittely.html
@@ -15,9 +15,9 @@
 <div id="palkki"><div id="vasenpalkki"><h2>Ryhmä 10</h2>
     <div id="ryhma">
             <p>
-                Juho<br><a><img class="ryhmäkuva" src="kuvat/placeholder.png"></a>
-                Teemu<br><a><img class="ryhmäkuva" src="kuvat/placeholder.png"></a>
-                Tommi<br><a><img class="ryhmäkuva" src="kuvat/placeholder.png"></a>
+                Juho<br>
+                Teemu<br>
+                Tommi<br>
             </p>
         <a id="index.html" href="index.html">Karttasovellus</a>
     </div></div>
