--- a/esittely.html
+++ b/esittely.html
@@ -19,7 +19,7 @@
                 Teemu<br>
                 Tommi<br>
             </p>
-        <a id="index.html" href="index.html">Karttasovellus</a>
+        <a id="index.html" href="index/index.html">Karttasovellus</a>
     </div></div>
 </div>
     <article>
