--- a/index/index.html
+++ b/index/index.html
@@ -5,7 +5,7 @@
     <title>Pyöräparkkikartta</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.5.1/leaflet.css" rel="stylesheet">
 
-    <link href="css/karttasovellus.css" rel="stylesheet">
+    <link href="../css/karttasovellus.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Varela&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Concert+One&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet">
@@ -48,8 +48,8 @@
 <!-- Esri Leaflet Geocoder -->
 <link rel="stylesheet" href="https://unpkg.com/esri-leaflet-geocoder/dist/esri-leaflet-geocoder.css">
 <script src="https://unpkg.com/esri-leaflet-geocoder"></script>
-<script src="js/kartta.js"></script>
-<script src="js/marker.js"></script>
-<script src="js/saa.js"></script>
+<script src="../js/kartta.js"></script>
+<script src="../js/marker.js"></script>
+<script src="../js/saa.js"></script>
 </body>
 </html>
