nappi, aika css

--- a/esittely.html
+++ b/esittely.html
@@ -84,7 +84,7 @@
             <p style="color:red;">background: #ffe259; (vanhin varalle)</p>
             <p style="color:saddlebrown;">background: -webkit-linear-gradient(to right, #ffa751, #ffe259); (vanhat)</p>
             <p style="color:green;">background: linear-gradient(to right, #ffa751, #ffe259); (uusimmat)<br>Luo taustoja joiden väri riippuu sijainnista.</p>
-            <p>box-shadow: inset 2px 1px 20px #e97c71;<br>Luo joko ulkoisia tai sisäisiä varjoja reunoille.</p>
+            <p><b>box-shadow: inset 2px 1px 20px #e97c71;</b><br>Luo joko ulkoisia tai sisäisiä varjoja reunoille.</p>
         </li>
     </ul>
     </article>
