--- a/index/index.html
+++ b/index/index.html
@@ -2,7 +2,7 @@
 <html lang="fi">
 <head>
     <meta charset="UTF-8">
-    <title>Pyöräparkkikartta</title>
+    <title>Pyöräapu</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.5.1/leaflet.css" rel="stylesheet">
 
     <link href="../css/karttasovellus.css" rel="stylesheet">
@@ -13,7 +13,7 @@
     <link href="https://fonts.googleapis.com/css?family=Ubuntu&display=swap" rel="stylesheet">
 </head>
 <body>
-<div id="otsikko"><h1>Kaupunkipyöräparkkien sijainnit</h1></div>
+<div id="otsikko"><h1>Pyöräapu</h1></div>
 <div id="body">
 <div id="navigaatioJaOhjeet">
     <div id="navigaatio" class="visible">
@@ -33,7 +33,6 @@
         <p>Kartalla olevia merkkejä hiirellä painamalla saat esille kyseisen pyöräpaikan tiedot.</p>
         <p>Voitte sen jälkeen laittaa haluamanne merkit alkupisteeksi ja määränpääksi.</p>
         <p><b>Hae</b> nappia painamalla ohjelma laskee ja piirtää reitin kahden pisteen välille.</p>
-        <p>Ohjelma myös näyttää päivän sään ja kuinka kauan matka arviolta kestää.</p>
     </div>
 </div>
 <div id="mapJaSaa">
