--- a/esittely.html
+++ b/esittely.html
@@ -4,14 +4,21 @@
     <meta charset="UTF-8">
     <title>esittely</title>
     <link href="css/esittely.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Cherry+Cream+Soda&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Ruluko&display=swap" rel="stylesheet">
 </head>
 <body>
 <header >
-<img id="banner" src="kuvat/banner.jpg">
+<div id="otsikkotausta"><img id="banner" src="kuvat/banner.jpg"></div>
 </header>
-
+<ul id="valikko">
+    <li class="valikot"><a href="#banner">Alku</a></li>
+    <li class="valikot"><a href="#sää">Sää</a></li>
+    <li class="valikot"><a href="#pyöräpaikat">Pyöräpaikat</a></li>
+    <li class="valikot"><a href="#navigointi">Navigointi</a></li>
+    <li class="valikot"><a href="#css">CSS</a></li>
+</ul>
 <div id="body">
-
 <div id="palkki"><div id="vasenpalkki"><h2>Ryhmä 10</h2>
     <div id="ryhma">
             <p>
@@ -19,15 +26,15 @@
                 Teemu<br>
                 Tommi<br>
             </p>
-        <a id="index.html" href="index/index.html">Karttasovellus</a>
+        <a id="index.html" href="index/index.html"><b>Karttasovellus</b></a>
     </div></div>
 </div>
     <article>
-    <ul>
-        <li><h3>Kartta</h3><br><a href="https://leafletjs.com/">https://leafletjs.com/</a>
+    <ul id="lista">
+        <li class="api" id="kartta"><h3>Kartta</h3><br><a href="https://leafletjs.com/">https://leafletjs.com/</a>
             <p><a href="https://www.openstreetmap.org">https://www.openstreetmap.org</a></p>
             <p>Lisätietoja: On sama kartan ilmaisversio, kuin sähköauto esimerkissä.</p></li>
-        <li><h3>Sää</h3><br><a href="https://openweathermap.org/api">https://openweathermap.org/api</a>
+        <li class="api" id="sää"><h3>Sää</h3><br><a href="https://openweathermap.org/api">https://openweathermap.org/api</a>
             <p>Lisätietoja: Antaa Helsingin säätiedot. Käyttö on hieman rajoittunutta ilmaisuutensa takia. Täysversiosta saisi esimerkiksi tunnin välein tietoja.
             Säätietojen päivittymisellä on 10 minuutin väli, joten sen nopeampaa päivittämistä ei suositella turhien pyyntöjen välttämiseksi. Ilmaisversioon tarvitsi
                 rekisteröityä, jotta sai luotua oman koodin rajapinnan käyttöön.</p>
@@ -36,7 +43,7 @@
             <p style="color:blue;">&ltdiv class="lampo"> ${lampo}°C&lt/div></p>
             <p style="color:green;">&ltdiv class="saakuva">&ltimg src="http://openweathermap.org/img/wn/${icon}@2x.png">&lt/div>&ltdiv class="tuuli">💨 ${(tuuli.speed.toFixed(1))} m/&lt/div></p>
             &lt/div>`;         < = &,l,t </p></li>
-        <li><h3>Pyöräpaikat</h3><br><a href="https://api.digitransit.fi/routing/v1/routers/hsl/bike_rental">https://api.digitransit.fi/routing/v1/routers/hsl/bike_rental</a>
+        <li class="api" id="pyöräpaikat"><h3>Pyöräpaikat</h3><br><a href="https://api.digitransit.fi/routing/v1/routers/hsl/bike_rental">https://api.digitransit.fi/routing/v1/routers/hsl/bike_rental</a>
             <br><p><b>Lisätietoja:</b> <br> Sisältää Helsingin, Vantaan ja Espoon pyöräasemien koordinaatit, nimet, reaaliaikaiset pyörien määrät ja asemien kapasiteetit.
             Asemien osoitteet piti hakea Leafletin Reverse geocode -funktiolla, joka muuttaa koordinaatit osoitteiksi. Kaikkien pyöräasemien osoitteita ei voitu
             kuitenkaan hakea samaan aikaan sillä Leafletin serverit tulkitsee tämän ilmeisesti palvelunestohyökkäykseksi ja blokkaa pääsyn servereille. Tästä syystä
@@ -52,7 +59,7 @@
                 }); <br>
                 }
                </p></li>
-        <li><h3>Navigointi</h3><br><a href="https://api.digitransit.fi/routing/v1/routers/finland/index/graphql">https://api.digitransit.fi/routing/v1/routers/finland/index/graphql</a>
+        <li class="api" id="navigointi"><h3>Navigointi</h3><br><a href="https://api.digitransit.fi/routing/v1/routers/finland/index/graphql">https://api.digitransit.fi/routing/v1/routers/finland/index/graphql</a>
             <p>Lisätietoja: Hakee body parametrien perusteella tietoa koko suomen reiteistä.</p><br>
             <p>Alla on esimerkki jossa koodi hakee apilla matkan tiedot, antaa matkan pituuden sekunteina, jonka jälkeen se muutetaan tunneiksi ja minuuteiksi.</p>
             fetch('https://api.digitransit.fi/routing/v1/routers/finland/index/graphql', asetukset).<br>
@@ -79,7 +86,7 @@
             minuutit= Math.floor(minuutit);<br>
             time.innerHTML= minuutit + ' minuuttia';<br>
             }</p></li>
-        <li id="css"><h3>CSS</h3>
+        <li class="api" id="css"><h3>CSS</h3>
             <p>Muutama käyttämämme tyyli.</p>
             <p style="color:red;">background: #ffe259; (vanhin varalle)</p>
             <p style="color:saddlebrown;">background: -webkit-linear-gradient(to right, #ffa751, #ffe259); (vanhat)</p>
@@ -91,6 +98,20 @@
     <aside id="aside">
     <div id="oikeapalkki"><img id="kuva_oikea" src="kuvat/placeholder_oikea.png"></div>
     </aside>
+    <script>
+        window.onscroll = function() {myFunction()};
+
+        var navbar = document.getElementById("valikko");
+        var sticky = navbar.offsetTop;
+
+        function myFunction() {
+            if (window.pageYOffset >= sticky) {
+                navbar.classList.add("sticky")
+            } else {
+                navbar.classList.remove("sticky");
+            }
+        }
+    </script>
 </div>
 </body>
 </html>
