--- a/index/esittely.html
+++ b/index/esittely.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <title>esittely</title>
-    <link href="css/esittely.css" rel="stylesheet">
+    <link href="../css/esittely.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Cherry+Cream+Soda&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Ruluko&display=swap" rel="stylesheet">
 </head>
 <body>
 <header >
-<div id="otsikkotausta"><img id="banner" src="kuvat/banner.jpg"></div>
+<div id="otsikkotausta"><img id="banner" src="../kuvat/banner.jpg"></div>
 </header>
 <ul id="valikko">
     <li class="valikot"><a href="#banner">Alku</a></li>
@@ -26,7 +26,7 @@
                 Teemu<br>
                 Tommi<br>
             </p>
-        <a id="index.html" href="index/index.html"><b>Karttasovellus</b></a>
+        <a id="index.html" href="index.html"><b>Karttasovellus</b></a>
     </div></div>
 </div>
     <article>
@@ -96,7 +96,7 @@
     </ul>
     </article>
     <aside id="aside">
-    <div id="oikeapalkki"><img id="kuva_oikea" src="kuvat/placeholder_oikea.png"></div>
+    <div id="oikeapalkki"><img id="kuva_oikea" src="../kuvat/placeholder_oikea.png"></div>
     </aside>
     <script>
         window.onscroll = function() {myFunction()};
