--- a/index/index.html
+++ b/index/index.html
@@ -33,6 +33,7 @@
         <p>Kartalla olevia merkkejä hiirellä painamalla saat esille kyseisen pyöräpaikan tiedot.</p>
         <p>Voitte sen jälkeen laittaa haluamanne merkit alkupisteeksi ja määränpääksi.</p>
         <p><b>Hae</b> nappia painamalla ohjelma laskee ja piirtää reitin kahden pisteen välille.</p>
+        <a id="esittely" href="esittely.html"><b>TAKAISIN</b></a>
     </div>
 </div>
 <div id="mapJaSaa">
