--- a/index/esittely.html
+++ b/index/esittely.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
     <title>esittely</title>
     <link href="../css/esittely.css" rel="stylesheet">
     <link href="../css/kapea.css" rel="stylesheet">
@@ -30,7 +30,7 @@
         <a id="index.html" href="index.html"><b>Karttasovellus</b></a>
     </div>
 </div>
-    <img id="omakuva" src="../kuvat/pyörä2.jpg" width="350px" height="600px">
+    <a href="../kuvat/pyörä2.jpg"><img id="omakuva" src="../kuvat/pyörä.jpg"  style="width: 350px; height: 600px;"></a>
     <video id="video" width="350" height="197" controls>
         <source src="../Esittelyvideo.mp4" type="video/mp4">
         <source src="../Esittelyvideo.ogv" type="video/ogv">
